  - Fixed low-level word-wrapping function reading from *text_end when passed
    a string range. (#9107) [@achabense]
- Nav:
  - Fixed remote/shortcut InputText() not teleporting mouse cursor when
    nav cursor is visible and `io.ConfigNavMoveSetMousePos` is enabled.
  - Fixed a looping/wrapping issue when done in menu layer. (#9178)
- Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
  noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
- InvisibleButton: allow calling with size (0,0) to fit to available content 
  size. (#9166, #7623)
- Tooltips, Disabled: fixed EndDisabledOverrideReenable() assertion when
  nesting a tooltip in a disabled block. (#9180, #7640) [@RegimantasSimkus]
- Added GetItemFlags() in public API for consistency and to expose generic
  flags of last submitted item. (#9127)
- Log/Capture: fixed erroneously injecting extra carriage returns in output
  buffer when ItemSpacing.y > FramePadding.y + 1.
- Images:
  - Added style.ImageRounding, ImGuiStyleVar_ImageRounding to configure
    rounding of Image() widgets. (#2942, #845)
  - ImageButton() doesn't use a clamped style.FrameRounding value but instead
    adjust inner image rounding when FramePadding > FrameRounding. (#2942, #845)
- Shortcuts:
  - IsItemHovered() without ImGuiHoveredFlags_AllowWhenBlockedByActiveItem
    doesn't filter out the signal when activated item is a shortcut remote activation;
    (which mimicks what's done internally in the ItemHoverable() function). (#9138)
  - Fixed tooltip placement being affected for a frame when located over an item
    activated by SetNextItemShortcut(). (#9138)
- Error Handling:
  - Improve error handling and recovery for EndMenu()/EndCombo(). (#1651, #9165, #8499)
  - Improve error handling and recovery for TableSetupColumn().
- Debug Tools:
  - Debug Log: fixed incorrectly printing characters in IO log when submitting
    non-ASCII values to `io.AddInputCharacter()`. (#9099)