@@ -172,6 +172,10 @@ Other Changes:
   - Fixed remote/shortcut InputText() not teleporting mouse cursor when
     nav cursor is visible and `io.ConfigNavMoveSetMousePos` is enabled.
   - Fixed a looping/wrapping issue when done in menu layer. (#9178)
+  - Fixed speed scale for resizing/moving with keyboard/gamepad. We incorrectly
+    used io.DisplayFramebufferScale (very old code), effectively making those
+    actions faster on macOS/iOS retina screens.
+    (changed this to use a style scale factor that's not fully formalized yet)
 - Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
   noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
 - InvisibleButton: allow calling with size (0,0) to fit to available content 
